# CG

./: .gitignore  CMakeLists.txt  esferas.c  hello_kitty.c  stb_image.h  testando.c
bule/: bule.c  bule.h
composicao/: cone.h  cubo.c  cubo.h  esfera.c  main.c
esferas/: esferas.c
iluminacao/: cone.c  esfera.h  main.c
projeto_composicao/: esfera.c  esfera.h  main.c
projeto_final/: main.c
projeto_rotacao/: cone.c  cubo.c  esfera.c  main.c
transformações/: bules.c  teapot.c
